syntax = "proto3";

package api.v1.user;

import "google/protobuf/timestamp.proto";

import "model/common.proto";
import "model/metadata.proto";
import "model/user.proto";
import "model/auth.proto";

enum VerificationType {
  VERIFICATION_TYPE_UNSPECIFIED = 0;
  VERIFICATION_TYPE_EMAIL = 1;
  VERIFICATION_TYPE_TEXT = 2;
  VERIFICATION_TYPE_RESET_PASSWORD = 3;
}

message VerificationCode {
  model.HashingInstance code = 1;
  google.protobuf.Timestamp sent_at = 2;
  google.protobuf.Timestamp expires_at = 3;
  int32 attempts = 4;
  google.protobuf.Timestamp last_attempt = 5;
  VerificationType type = 6;
  string user_id = 7;
}

message Profile {
  string first_name = 1;
  string last_name = 2;
}

message User {
  string user_id = 1;
  model.UserInfo user_info = 2;
  Profile profile = 3;
  google.protobuf.Timestamp updated_at = 4;
  model.RegisterInfo register_info = 5;
  bool is_phone_verified = 6;
  bool is_email_verified = 7;
  google.protobuf.Timestamp new_sessions_since = 8;
  map<string, bytes> metadata = 9;
}

message Update {
  message ResetSessions {}

  oneof field {
    string email = 1;
    string username = 2;
    string phone_number = 3;
    string password = 4;
    Profile profile = 5;
    bool is_email_verified = 6;
    bool is_phone_verified = 7;
    ResetSessions reset_sessions = 8;
    model.Metadata set_metadata = 9;
    string delete_metadata_key = 10;
    model.HashingInstance hashed_password = 12;
  }
}

message AuthMethod {
  oneof method {
    model.LoginType login_type = 1;
  }
}

message SessionEntry {
  string session_id = 1;
  Session session = 2;
}

message Session {
  AuthMethod auth_method = 1;
  bool is_invalidated = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp invalidated_at = 4;
  google.protobuf.Timestamp expires_at = 5;
  google.protobuf.Timestamp renewed_at = 6;
  string country = 7;
  int32 postal_code = 8;
}
